// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages capConfirmation should render correctly for capped ticket by distance 1`] = `
<TwoThirdsLayout
  description="Cap Confirmation page of the Create Fares Data Service"
  errors={Array []}
  title="Cap Confirmation - Create Fares Data Service"
>
  <CsrfForm
    action="/api/capConfirmation"
    csrfToken=""
    method="post"
  >
    <h1
      className="govuk-heading-l"
    >
      Check your answers before submitting your fares information
    </h1>
    <ConfirmationTable
      confirmationElements={
        Array [
          Object {
            "content": "Pricing by distance ",
            "href": "typeOfCap",
            "name": "Cap type",
          },
          Object {
            "content": "By distance cap",
            "href": "/createCaps",
            "name": "Capped product name",
          },
          Object {
            "content": Array [
              "Price - £2",
              "Duration - 1 day",
            ],
            "href": "/createCaps",
            "name": "Cap 1",
          },
          Object {
            "content": "1, 2C",
            "href": "/serviceList",
            "name": "Services",
          },
          Object {
            "content": Array [
              "Min price: £2, Max price: £4",
            ],
            "href": "/definePricingPerDistance",
            "name": "Prices",
          },
          Object {
            "content": "0 km - End of journey, Price per km: £4",
            "href": "/definePricingPerDistance",
            "name": "Distance band 1",
          },
          Object {
            "content": "Pricing structure starts after 2 min with percentage discount 2%",
            "href": "/additionalPricingStructures",
            "name": "Additional pricing",
          },
        ]
      }
      header="Cap Information"
    />
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages capConfirmation should render correctly for capped ticket by products 1`] = `
<TwoThirdsLayout
  description="Cap Confirmation page of the Create Fares Data Service"
  errors={Array []}
  title="Cap Confirmation - Create Fares Data Service"
>
  <CsrfForm
    action="/api/capConfirmation"
    csrfToken=""
    method="post"
  >
    <h1
      className="govuk-heading-l"
    >
      Check your answers before submitting your fares information
    </h1>
    <ConfirmationTable
      confirmationElements={
        Array [
          Object {
            "content": "Pricing by products ",
            "href": "typeOfCap",
            "name": "Cap type",
          },
          Object {
            "content": "capped-product-group-name",
            "href": "/selectCappedProductGroup",
            "name": "Product group name",
          },
          Object {
            "content": "By products cap",
            "href": "/createCaps",
            "name": "Capped product name",
          },
          Object {
            "content": Array [
              "Price - £2",
              "Duration - 1 hour",
            ],
            "href": "/createCaps",
            "name": "Cap 1",
          },
          Object {
            "content": "24 hr",
            "href": "/selectCapValidity",
            "name": "Cap expiry",
          },
          Object {
            "content": "Rolling days",
            "href": "/defineCapStart",
            "name": "Cap starts",
          },
          Object {
            "content": "1, 2C",
            "href": "/serviceList",
            "name": "Services",
          },
        ]
      }
      header="Cap Information"
    />
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages capConfirmation should render correctly for capped ticket by taps 1`] = `
<TwoThirdsLayout
  description="Cap Confirmation page of the Create Fares Data Service"
  errors={Array []}
  title="Cap Confirmation - Create Fares Data Service"
>
  <CsrfForm
    action="/api/capConfirmation"
    csrfToken=""
    method="post"
  >
    <h1
      className="govuk-heading-l"
    >
      Check your answers before submitting your fares information
    </h1>
    <ConfirmationTable
      confirmationElements={
        Array [
          Object {
            "content": "Pricing by taps ",
            "href": "typeOfCap",
            "name": "Cap type",
          },
          Object {
            "content": "By taps cap",
            "href": "/createCaps",
            "name": "Capped product name",
          },
          Object {
            "content": Array [
              "Price - £2",
              "Duration - 1 hour",
            ],
            "href": "/createCaps",
            "name": "Cap 1",
          },
          Object {
            "content": "24 hr",
            "href": "/selectCapValidity",
            "name": "Cap expiry",
          },
          Object {
            "content": "Rolling days",
            "href": "/defineCapStart",
            "name": "Cap starts",
          },
          Object {
            "content": "1, 2C",
            "href": "/serviceList",
            "name": "Services",
          },
          Object {
            "content": Array [
              "Tap number - 1, Price - £2",
            ],
            "href": "/multiTapsPricing",
            "name": "Prices by taps",
          },
        ]
      }
      header="Cap Information"
    />
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;
